tests/wordpress/fail/plugins/pretty-link/pretty-link.php
<?php
/*
Plugin Name: Pretty Link Lite
Plugin URI: http://blairwilliams.com/pretty-link
Description: Shrink, track and share any URL on the Internet from your WordPress website!
Version: 1.4.56
Author: Caseproof
Author URI: http://caseproof.com
Copyright: 2004-2011, Caseproof, LLC
